# opengl_cpp

./: CMakeLists.txt  LICENSE  README.md
impl/: CMakeLists.txt
impl/inc/glad/: glad.h
impl/src/: glad.c  main.cpp
